Add run command to start server with optimized JVM flags
- Prompts for memory on first run, stores in server-lock.json as runMemory
- --memory flag overrides without rewriting saved value
- --jar flag to run a different jar than the locked one
- --dry-run flag to print command without starting
- Uses Aikar's G1GC flags by default
- Unit and integration tests for memory normalization and command building